--- a/templates/user/editGrade.html
+++ b/templates/user/editGrade.html
@@ -32,8 +32,8 @@
           </a>
         </li>
         <li>
-          <a href="{% url 'editGrade' %}">
-            <i class="bx bx-edit"></i>
+          <a href="#" class="active">
+            <i class="bx bx-edit bx-tada"></i>
             <span class="links_name">Edit Nilai</span>
           </a>
         </li>
@@ -44,8 +44,8 @@
           </a>
         </li>
         <li>
-          <a href="#" class="active">
-            <i class="bx bxs-user-account bx-tada"></i>
+          <a href="{% url 'hrTeacher' %}">
+            <i class="bx bxs-user-account"></i>
             <span class="links_name">Wali Kelas</span>
           </a>
         </li>
@@ -61,13 +61,13 @@
       <nav>
         <div class="sidebar-button">
           <i class="bx bxs-user-circle"></i>
-          <span class="dashboard">Data Kelas</span>
+          <span class="dashboard">Edit</span>
         </div>
         <div class="search-box">
           <input type="text" placeholder="Search..." />
           <i class="bx bx-search"></i>
         </div>
-        <div class="profile-details" onclick="move('profile.html')">
+        <div class="profile-details" onclick="move('profileUser.html')">
           <i class="bx bxs-user-circle"></i>
           <span class="admin_name">Username (Level)</span>
           <i class="bx bx-log-in-circle"></i>
@@ -77,7 +77,82 @@
       <div class="home-content">
         <div class="update-boxes2" data-aos="fade-right">
           <div class="recent-update box">
-            <div class="title">Kelas</div>
+            <div class="title">Nilai</div>
+            <div class="update-details">
+              <table class="input">
+                <colgroup>
+                  <col span="1" style="width: 10%" />
+                  <col span="1" style="width: 20%" />
+                  <col span="1" style="width: 70%" />
+                </colgroup>
+                <tbody>
+                  <tr class="details">
+                    <td class="topic" rowspan="8">
+                      <i
+                        class="bx bxs-graduation"
+                        style="font-size: 150px; color: #0a2558"
+                      ></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="topic">Mata Pelajaran</td>
+                    <td>
+                      <input
+                        type="text"
+                        name="course"
+                        id="course"
+                        placeholder="Mata Pelajaran"
+                      />
+                    </td>
+                  </tr>
+                  <tr class="details">
+                    <td class="topic">Nama Siswa</td>
+                    <td>
+                      <input
+                        type="text"
+                        name="nameStudent"
+                        id="nameStudent"
+                        placeholder="Nama Siswa"
+                      />
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="topic">Kelas</td>
+                    <td>
+                      <input
+                        type="text"
+                        name="class"
+                        id="class"
+                        placeholder="Kelas"
+                      />
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="topic">Nilai</td>
+                    <td>
+                      <input
+                        type="text"
+                        name="grade"
+                        id="grade"
+                        placeholder="Nilai"
+                      />
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="button">
+              <a
+                href="{% url 'grade' %}"
+                onClick="alert('Nilai Berhasil Diubah'); resetInput();"
+                >Simpan</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="update-boxes2" data-aos="fade-right">
+          <div class="recent-update box">
+            <div class="title">Daftar Nilai</div>
             <div class="update-details" style="float: none">
               <table>
                 <tr class="details">
@@ -85,21 +160,32 @@
                   <th class="topic">Nama</th>
                   <th class="topic">NIK</th>
                   <th class="topic">Jenis Kelamin</th>
-                  <th class="topic">Progres</th>
+                  <th class="topic">Nilai</th>
+                  <th class="topic">Tindakan</th>
                 </tr>
                 <tr class="details">
                   <td>1</td>
                   <td>nama 1</td>
                   <td>002</td>
                   <td>Perempuan</td>
-                  <td>80%</td>
+                  <td>80</td>
+                  <td class="action">
+                    <a href="#" class="delete" onclick="confirmation2()"
+                      >Hapus</a
+                    >
+                  </td>
                 </tr>
                 <tr class="details">
                   <td>2</td>
-                  <td>nama 2</td>
+                  <td>nam 2</td>
                   <td>001</td>
                   <td>Laki-Laki</td>
-                  <td>70%</td>
+                  <td>70</td>
+                  <td class="action">
+                    <a href="#" class="delete" onclick="confirmation2()"
+                      >Hapus</a
+                    >
+                  </td>
                 </tr>
               </table>
             </div>
@@ -118,7 +204,7 @@
         } else sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
       };
 
-      function confirmation() {
+      function confirmationation() {
         var ask = confirm("Apakah Anda Yakin ?");
 
         if (ask === true) {
@@ -126,18 +212,12 @@
         } else {
         }
       }
-
-      function confirmation2() {
-        var ask = confirm("Apakah Anda Yakin ?");
-
-        if (ask === true) {
-          alert("Data Berhasil Dihapus");
-        } else {
-        }
-      }
-
       function move(url) {
         window.location = url;
+      }
+
+      function resetInput() {
+        document.getElementsByClassName("inputs").reset();
       }
     </script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
