--- a/templates/admin/editClass.html
+++ b/templates/admin/editClass.html
@@ -20,44 +20,44 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="admin/admin.html">
+          <a href="{% url 'admin' %}">
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="{% url 'history' %}">
             <i class="bx bx-history"></i>
             <span class="links_name">Riwayat Login</span>
           </a>
         </li>
         <li>
-          <a href="report.html">
+          <a href="{% url 'report' %}">
             <i class="bx bxs-report"></i>
             <span class="links_name">Laporan Akhir</span>
           </a>
         </li>
         <li>
-          <a href="teacher.html">
+          <a href="{% url 'teacher' %}">
             <i class="bx bxs-user-rectangle"></i>
             <span class="links_name">Data Guru</span>
           </a>
         </li>
         <li>
-          <a href="student.html">
+          <a href="{% url 'student' %}">
             <i class="bx bx-book-reader"></i>
             <span class="links_name">Data Siswa</span>
           </a>
         </li>
         <li>
-          <a href="class.html">
-            <i class="bx bx-building-house"></i>
+          <a href="{% url 'class' %}" class="active">
+            <i class="bx bx-building-house bx-tada"></i>
             <span class="links_name">Data Kelas</span>
           </a>
         </li>
         <li>
-          <a href="#" class="active">
-            <i class="bx bx-book-open bx-tada"></i>
+          <a href="{% url 'course' %}">
+            <i class="bx bx-book-open"></i>
             <span class="links_name">Data Mapel</span>
           </a>
         </li>
@@ -73,7 +73,7 @@
       <nav>
         <div class="sidebar-button">
           <i class="bx bxs-user-circle"></i>
-          <span class="dashboard">Data mapel</span>
+          <span class="dashboard">Edit</span>
         </div>
         <div class="search-box">
           <input type="text" placeholder="Search..." />
@@ -89,60 +89,64 @@
       <div class="home-content">
         <div class="update-boxes2" data-aos="fade-right">
           <div class="recent-update box">
-            <div class="title">Mapel</div>
-            <div class="update-details" style="float: none">
-              <ul class="details">
-                <li class="topic">No</li>
-                <li>1</li>
-                <li>2</li>
-              </ul>
-              <ul class="details">
-                <li class="topic">Nama</li>
-                <li>MTK</li>
-                <li>PBO</li>
-              </ul>
-              <ul class="details">
-                <li class="topic">Jurusan</li>
-                <li>Umum</li>
-                <li>RPL</li>
-              </ul>
-              <ul class="details">
-                <li class="topic">Pengajar</li>
-                <li>nama 1</li>
-                <li>nama 2</li>
-              </ul>
-              <ul class="details" style="text-align: center">
-                <li class="topic">Tindakan</li>
-                <li>
-                  <ul class="action">
-                    <li>
-                      <a href="editCourse.html" class="edit">Edit</a>
-                    </li>
-                    <li>
-                      <a href="#" class="delete" onclick="confirmation2()"
-                        >Hapus</a
-                      >
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <ul class="action">
-                    <li>
-                      <a href="editCourse.html" class="edit">Edit</a>
-                    </li>
-                    <li>
-                      <a href="#" class="delete" onclick="confirmation2()"
-                        >Hapus</a
-                      >
-                    </li>
-                  </ul>
-                </li>
-              </ul>
+            <div class="title">kelas</div>
+            <div class="update-details">
+              <table class="input">
+                <colgroup>
+                  <col span="1" style="width: 10%" />
+                  <col span="1" style="width: 20%" />
+                  <col span="1" style="width: 70%" />
+                </colgroup>
+                <tbody>
+                  <tr class="details">
+                    <td class="topic" rowspan="8">
+                      <i
+                        class="bx bx-building-house"
+                        style="font-size: 150px; color: #0a2558"
+                      ></i>
+                    </td>
+                  </tr>
+                  <tr class="details">
+                    <td class="topic">Tingkat</td>
+                    <td>
+                      <input
+                        type="text"
+                        name="level"
+                        id="level"
+                        placeholder="Tingkat"
+                      />
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="topic">Jurusan</td>
+                    <td>
+                      <input
+                        type="text"
+                        name="major"
+                        id="major"
+                        placeholder="Jurusan"
+                      />
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="topic">Jumlah Kelas</td>
+                    <td>
+                      <input
+                        type="text"
+                        name="class"
+                        id="class"
+                        placeholder="Jumlah Kelas"
+                      />
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
             <div class="button">
-              <a href="addCourse.html"
-                ><i class="bx bxs-user-plus bx-xs" style="margin-right: 5px"></i
-                >Tambah</a
+              <a
+                href="{% url 'class' %}"
+                onClick="alert('Data Kelas Berhasil Diubah')"
+                ><i class="bx bx-save" style="margin-right: 5px"></i>Simpan</a
               >
             </div>
           </div>
@@ -168,16 +172,6 @@
         } else {
         }
       }
-
-      function confirmation2() {
-        var ask = confirm("Apakah Anda Yakin ?");
-
-        if (ask === true) {
-          alert("Data Berhasil Dihapus");
-        } else {
-        }
-      }
-
       function move(url) {
         window.location = url;
       }
