--- a/templates/admin/history.html
+++ b/templates/admin/history.html
@@ -8,8 +8,8 @@
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="fontawesome/css/all.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="text/javascript" src="chartjs/Chart.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
@@ -20,43 +20,43 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="admin/admin.html">
+          <a href="{% url 'admin' %}">
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
         </li>
         <li>
-          <a href="history.html">
-            <i class="bx bx-history"></i>
+          <a href="#" class="active">
+            <i class="bx bx-history bx-tada"></i>
             <span class="links_name">Riwayat Login</span>
           </a>
         </li>
         <li>
-          <a href="#" class="active">
-            <i class="bx bxs-report bx-tada"></i>
+          <a href="{% url 'report' %}">
+            <i class="bx bxs-report"></i>
             <span class="links_name">Laporan Akhir</span>
           </a>
         </li>
         <li>
-          <a href="teacher.html">
+          <a href="{% url 'teacher' %}">
             <i class="bx bxs-user-rectangle"></i>
             <span class="links_name">Data Guru</span>
           </a>
         </li>
         <li>
-          <a href="student.html">
+          <a href="{% url 'student' %}">
             <i class="bx bx-book-reader"></i>
             <span class="links_name">Data Siswa</span>
           </a>
         </li>
         <li>
-          <a href="class.html">
+          <a href="{% url 'class' %}">
             <i class="bx bx-building-house"></i>
             <span class="links_name">Data Kelas</span>
           </a>
         </li>
         <li>
-          <a href="course.html">
+          <a href="{% url 'course' %}">
             <i class="bx bx-book-open"></i>
             <span class="links_name">Data Mapel</span>
           </a>
@@ -73,7 +73,7 @@
       <nav>
         <div class="sidebar-button">
           <i class="bx bxs-user-circle"></i>
-          <span class="dashboard">Laporan</span>
+          <span class="dashboard">Riwayat</span>
         </div>
         <div class="search-box">
           <input type="text" placeholder="Search..." />
@@ -87,69 +87,79 @@
       </nav>
 
       <div class="home-content">
-        <div class="update-boxes" data-aos="fade-up">
+        <div class="update-boxes" data-aos="fade-right">
           <div class="recent-update box">
-            <div class="title">Laporan Akhir</div>
+            <div class="title">Riwayat</div>
             <div class="update-details">
-              <ul class="details">
-                <li class="topic">No</li>
-                <li>1</li>
-                <li>2</li>
-              </ul>
-              <ul class="details">
-                <li class="topic">Tanggal</li>
-                <li>17-02-2022</li>
-                <li>18-02-2022</li>
-              </ul>
-              <ul class="details">
-                <li class="topic">Jurusan</li>
-                <li>AK</li>
-                <li>RPL</li>
-              </ul>
-              <ul class="details">
-                <li class="topic">Kelas</li>
-                <li>XI-RPL 1</li>
-                <li>XI-RPL 2</li>
-              </ul>
+              <table>
+                <tr class="details">
+                  <th class="topic">No</th>
+                  <th class="topic">Waktu</th>
+                  <th class="topic">Tanggal</th>
+                  <th class="topic">User</th>
+                  <th class="topic">Kelas</th>
+                </tr>
+                <tr class="details">
+                  <td>1</td>
+                  <td>08.00</td>
+                  <td>17-02-2022</td>
+                  <td>Username</td>
+                  <td>XI-RPL 1</td>
+                </tr>
+                <tr class="details">
+                  <td>2</td>
+                  <td>09.30</td>
+                  <td>18-02-2022</td>
+                  <td>Username</td>
+                  <td>XI-RPL 2</td>
+                </tr>
+              </table>
             </div>
             <div class="button">
               <a href="#">See All</a>
             </div>
           </div>
-          <div class="top-update box" data-aos="fade-down">
-            <div class="title">
-              Export
-              <i class="bx bxs-file-export"></i>
-            </div>
-            <ul class="top-update-details">
-              <li>
-                <a href="#">
-                  <i class="bx bxs-x-circle" style="color: red"></i>
-                  <span class="item">XI-RPL1</span>
-                </a>
-                <div class="button">
-                  <a
-                    href="admin/admin.html"
-                    onclick="return false"
-                    style="background: rgb(61, 61, 61); cursor: default"
-                    ><i class="bx bx-printer" style="margin-right: 5px"></i
-                    >Print</a
-                  >
-                </div>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="bx bxs-check-circle" style="color: green"></i>
-                  <span class="item">XI-RPL2</span>
-                </a>
-                <div class="button">
-                  <a href="admin/admin.html"
-                    ><i class="bx bx-printer" style="margin-right: 5px"></i
-                    >Print</a
-                  >
-                </div>
-              </li>
-            </ul>
+          <div class="top-update box" data-aos="fade-left">
+            <div class="title">Wali Kelas</div>
+            <table>
+              <colgroup>
+                <col span="1" style="width: 10%" />
+                <col span="1" style="width: 65%" />
+                <col span="1" style="width: 25%" />
+              </colgroup>
+              <tbody>
+                <tr class="top-update-details">
+                  <td>
+                    <img
+                      src="https://img.icons8.com/external-nawicon-flat-nawicon/50/000000/external-teacher-back-to-school-nawicon-flat-nawicon.png"
+                    />
+                  </td>
+                  <td>
+                    <a href="#">
+                      <span class="item">Nama</span>
+                    </a>
+                  </td>
+                  <td>
+                    <span class="desc">Kelas</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <img
+                      src="https://img.icons8.com/external-nawicon-flat-nawicon/50/000000/external-teacher-back-to-school-nawicon-flat-nawicon.png"
+                    />
+                  </td>
+                  <td>
+                    <a href="#">
+                      <span class="item">Nama</span>
+                    </a>
+                  </td>
+                  <td>
+                    <span class="desc">Kelas</span>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
