--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,27 +14,26 @@
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="{% static 'css/style2.css' %}" />
+    <link rel="stylesheet" href="./style2.css" />
   </head>
   <body>
     <div class="box-form">
       <div class="left">
         <div class="overlay"></div>
       </div>
-      <form class="right" method="POST" action="{% url 'login' %}">
-          {% csrf_token %}
+
+      <div class="right">
         <h5>Login</h5>
         <div class="inputs">
-          <input type="text" name="uid" placeholder="Username" />
+          <input type="text" placeholder="Username" />
           <br />
-          <input type="password" name="password" placeholder="password" />
+          <input type="password" placeholder="password" />
         </div>
 
         <br /><br />
 
         <br />
-        <button value="login" type="submit">Login</button>
-      </form>
+        <button onclick="move('admin.html')">Login</button>
       </div>
     </div>
   </body>
