--- a/templates/user/user.html
+++ b/templates/user/user.html
@@ -26,39 +26,27 @@
           </a>
         </li>
         <li>
-          <a href="{% url 'history' %}">
-            <i class="bx bx-history"></i>
-            <span class="links_name">Riwayat Login</span>
+          <a href="{% url 'grade' %}">
+            <i class="bx bxs-file-plus"></i>
+            <span class="links_name">Input Nilai</span>
           </a>
         </li>
         <li>
-          <a href="{% url 'report' %}">
-            <i class="bx bxs-report"></i>
-            <span class="links_name">Laporan Akhir</span>
+          <a href="{% url 'editGrade' %}">
+            <i class="bx bx-edit"></i>
+            <span class="links_name">Edit Nilai</span>
           </a>
         </li>
         <li>
-          <a href="{% url 'teacher' %}">
-            <i class="bx bxs-user-rectangle"></i>
-            <span class="links_name">Data Guru</span>
+          <a href="{% url 'changePassword' %}">
+            <i class="bx bx-lock-open-alt"></i>
+            <span class="links_name">Ubah Password</span>
           </a>
         </li>
         <li>
-          <a href="{% url 'student' %}">
-            <i class="bx bx-book-reader"></i>
-            <span class="links_name">Data Siswa</span>
-          </a>
-        </li>
-        <li>
-          <a href="{% url 'class' %}">
-            <i class="bx bx-building-house"></i>
-            <span class="links_name">Data Kelas</span>
-          </a>
-        </li>
-        <li>
-          <a href="{% url 'course' %}">
-            <i class="bx bx-book-open"></i>
-            <span class="links_name">Data Mapel</span>
+          <a href="{% url 'hrTeacher' %}">
+            <i class="bx bxs-user-account"></i>
+            <span class="links_name">Wali Kelas</span>
           </a>
         </li>
         <li class="log_out">
@@ -79,7 +67,7 @@
           <input type="text" placeholder="Search..." />
           <i class="bx bx-search"></i>
         </div>
-        <div class="profile-details" onclick="move('profile.html')">
+        <div class="profile-details" onclick="move('profileUser.html')">
           <i class="bx bxs-user-circle"></i>
           <span class="admin_name">Username (Level)</span>
           <i class="bx bx-log-in-circle"></i>
@@ -90,47 +78,47 @@
         <div class="overview-boxes">
           <div class="box" data-aos="fade-right">
             <div class="right-side">
-              <div class="box-topic">Guru</div>
+              <div class="box-topic">Nilai Yang Diisi</div>
               <div class="number">100</div>
               <div class="indicator">
                 <i class="bx bxs-edit"></i>
                 <span class="text">Terkahir Diedit</span>
               </div>
             </div>
-            <i class="bx bxs-circle-three-quarter logo bx-spin"></i>
+            <i class="bx bx-task logo two bx-tada"></i>
           </div>
           <div class="box" data-aos="fade-down">
             <div class="right-side">
-              <div class="box-topic">Kelas</div>
+              <div class="box-topic">Nilai Kosong</div>
               <div class="number">38</div>
               <div class="indicator">
                 <i class="bx bxs-edit"></i>
                 <span class="text">Terkahir Diedit</span>
               </div>
             </div>
-            <i class="bx bxs-circle-three-quarter logo two bx-spin"></i>
+            <i class="bx bx-task-x logo four bx-tada"></i>
           </div>
           <div class="box" data-aos="fade-down">
             <div class="right-side">
-              <div class="box-topic">Siswa</div>
+              <div class="box-topic">Nilai Perbaikan</div>
               <div class="number">300</div>
               <div class="indicator">
                 <i class="bx bxs-edit"></i>
                 <span class="text">Terakhir Diedit</span>
               </div>
             </div>
-            <i class="bx bxs-circle-three-quarter logo three bx-spin"></i>
+            <i class="bx bx-sync logo three bx-tada"></i>
           </div>
           <div class="box" data-aos="fade-left">
             <div class="right-side">
-              <div class="box-topic">Mapel</div>
-              <div class="number">15</div>
+              <div class="box-topic">KKM</div>
+              <div class="number">75</div>
               <div class="indicator">
                 <i class="bx bxs-edit"></i>
                 <span class="text">Terkahir Diedit</span>
               </div>
             </div>
-            <i class="bx bxs-circle-three-quarter logo four bx-spin"></i>
+            <i class="bx bx-error-circle logo bx-tada"></i>
           </div>
         </div>
 
@@ -141,19 +129,19 @@
               <table>
                 <tr class="details">
                   <th class="topic">Tanggal</th>
-                  <th class="topic">User</th>
+                  <th class="topic">Waktu</th>
                   <th class="topic">Kelas</th>
                   <th class="topic">Tindakan</th>
                 </tr>
                 <tr class="details">
                   <td>17-02-2022</td>
-                  <td>Username</td>
+                  <td>08.20</td>
                   <td>XI-RPL 2</td>
                   <td>Input</td>
                 </tr>
                 <tr class="details">
                   <td>18-02-2022</td>
-                  <td>Username</td>
+                  <td>09.00</td>
                   <td>XI-RPL 1</td>
                   <td>Update</td>
                 </tr>
